@@ -7,6 +7,7 @@ encode.o: cups.h ipp.h http.h string.h ../config.h md5.h ppd.h debug.h
 http.o: string.h ../config.h http.h md5.h ipp.h debug.h
 http-addr.o: http.h string.h ../config.h md5.h debug.h
 ipp.o: string.h ../config.h ipp.h http.h md5.h debug.h
+langprintf.o: string.h ../config.h
 language.o: string.h ../config.h language.h cups_C.h
 mark.o: ppd.h string.h ../config.h debug.h
 md5.o: md5.h string.h ../config.h
